--- a/tip-calculator/Base.lproj/Main.storyboard
+++ b/tip-calculator/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
         <scene sceneID="Qvy-Ft-ilX">
             <objects>
                 <viewController title="Settings" id="SNM-Pb-T9I" customClass="SettingsViewController" customModule="tip_calculator" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="GG7-Xc-LuV" customClass="Settt">
+                    <view key="view" contentMode="scaleToFill" id="GG7-Xc-LuV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
